--- a/common/css/responsive.css
+++ b/common/css/responsive.css
@@ -1,6 +1,6 @@
 @media only screen and (max-width: 1279px) {
 
-	#silver-story .home_banner { min-height: 455px; }
+	#silver-story .home_banner { height: 60vh; background-attachment: inherit; }
 	
 	#silver-story h1 { font-size: 38px; line-height: 45px; }
 	#silver-story h1 { padding: 30px 20px 5px; }
@@ -8,7 +8,7 @@
 	#silver-story .content_row.row2 { margin: 25px 0 26px; }
 	#silver-story .content_row.row2 blockquote { padding-bottom: 20px; }
 	
-	#silver-story .content_row.row5 { min-height: 535px; }
+	#silver-story .content_row.row5 { height: 72vh; background-attachment: inherit; }
 	#silver-story .content_row.row5 h4 { font-size: 34px; line-height: 40px; }
 	#silver-story .content_row.row5 .content { max-width: 390px; right: 60px; bottom: 60px; }	
 }
@@ -17,7 +17,7 @@
 	
 	.wrapper { padding: 0 15px; }
 	
-	#silver-story .home_banner { min-height: 350px; }
+	#silver-story .home_banner { height: 36vh; }
 	#silver-story h1 { padding: 18px 20px 5px; font-size: 32px; line-height: 40px; }
 	
 	#silver-story .content_row.row2 blockquote { padding-bottom: 10px; font-size: 18px; line-height: 26px; }
@@ -29,7 +29,7 @@
 	#silver-story .content_row.row4 .right { height: calc(70vh); }
 	#silver-story .content_row.row4 { margin-top: 24px; margin-bottom: 30px; }
 	
-	#silver-story .content_row.row5 { margin-top: 28px; margin-bottom: 29px; min-height: 424px; }
+	#silver-story .content_row.row5 { margin-top: 28px; margin-bottom: 29px; height: 42vh; }
 	#silver-story .content_row.row5 h4 { font-size: 29px; line-height: 36px; }
 	#silver-story .content_row.row5 .content { padding: 14px 15px 14px 45px; right: 30px; bottom: 38px; }
 	#silver-story .content_row.row5 .content:before { left: 18px; top: 10px; font-size: 33px; }
@@ -44,7 +44,6 @@
 
 @media only screen and (max-width: 767px) {
 	
-	#silver-story .home_banner { min-height: 285px; }
 	#silver-story h1 { margin-top: -45px; }
 	
 	#silver-story .content_row.row4 { padding: 28px 0 41px; }
@@ -54,15 +53,17 @@
 	#silver-story .content_row.row4 .box { height: calc(23vh); }
 	#silver-story .content_row.row4 .right { height: calc(46vh); }
 	
-	#silver-story .content_row.row5 { margin-top: 24px; margin-bottom: 24px; min-height: 335px; }
+	#silver-story .content_row.row5 { margin-top: 24px; margin-bottom: 24px; height: 50vh; }
 	
 	#silver-story .content_row.row6 { padding: 28px 0 41px; }
+	
+	#silver-story .home_banner { height: 46vh; }
 	
 }
 
 @media only screen and (max-width: 639px) {
 	
-	#silver-story .home_banner { min-height: 212px; }
+	#silver-story .home_banner { height: 40vh; }
 	
 	#silver-story h1 { font-size: 30px; line-height: 36px; }
 	
@@ -78,7 +79,6 @@
 	#silver-story .content_row.row4 img, #silver-story .content_row.row6 img { display: block; }
 	#silver-story .content_row.row4 .left, #silver-story .content_row.row6 .box, #silver-story .content_row.row6 .column, #silver-story .content_row.row6 .box1, #silver-story .content_row.row6 .box3, #silver-story .content_row.row4 .box, #silver-story .content_row.row4 .right { min-height: inherit; background-image: inherit !important; height: inherit !important; }
 	
-	#silver-story .content_row.row5 { min-height: 265px; }
 	#silver-story .content_row.row5 .content { right: 20px; bottom: 20px; }
 	#silver-story .content_row.row5 h4 { font-size: 25px; line-height: 31px; }
 	
@@ -88,12 +88,12 @@
 
 @media only screen and (max-width: 479px) {
 	
-	#silver-story .home_banner { min-height: 150px; }
+	#silver-story .home_banner { height: 27vh; }
 	#silver-story h1 { font-size: 27px; line-height: 30px; }
 	
 	#silver-story .content_row.row5 .content { right: 0; bottom: 0; max-width: 100%; }
 	#silver-story .content_row.row5 h4 { font-size: 23px; line-height: 29px; }
-	#silver-story .content_row.row5 { min-height: 220px; }
+	#silver-story .content_row.row5 { height: 35vh; }
 	
 	#silver-story .content_row.row6 .box1, #silver-story .content_row.row6 .box2 { width: 100%; }
 	
