--- a/common/css/style.css
+++ b/common/css/style.css
@@ -64,7 +64,7 @@ h6 { font-size: 12px; }
 
 /* silver-story */
 #silver-story { padding-bottom: 15px; max-width: 100%; margin: auto; position: relative; overflow: hidden; }
-#silver-story .home_banner { width: 100%; min-height: 570px; overflow: hidden; background-size: cover; }
+#silver-story .home_banner { width: 100%; height: 70vh; overflow: hidden; background-size: cover; background-attachment: fixed; }
 
 #silver-story .content_row.row1 .wrapper { max-width: 870px; }
 #silver-story h1 { padding: 44px 20px 5px; margin-top: -79px; text-align: center; font-size: 45px; font-weight: 400; color: #000000; line-height: 53px; font-family: 'freightdisp_probold'; background: #fff; }
@@ -101,14 +101,7 @@ h6 { font-size: 12px; }
 #silver-story .content_row.row4 .view:hover { color: #007bc4; }
 #silver-story .content_row.row4 img, #silver-story .content_row.row6 img { display: none; }
 
-#silver-story .content_row.row5 {
-    margin-top: 37px;
-    margin-bottom: 45px;
-    min-height: 500px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 80vh;
-}
+#silver-story .content_row.row5 { margin-top: 37px; margin-bottom: 45px; height: 80vh; background-attachment: fixed; background-size: cover; background-repeat: no-repeat; }
 #silver-story .content_row.row5 .content { padding: 15px 15px 15px 50px; max-width: 426px; position: absolute; right: 75px; bottom: 65px; background: rgba(0,0,0,0.4); }
 #silver-story .content_row.row5 h4 { font-size: 40px; line-height: 45.9px; color: #fff; font-family: 'freighttext_proSBdIt'; }
 #silver-story .content_row.row5 .content:before { content: "“"; position: absolute; left: 25px; top: 7px; font-size: 40px; color: #fff; font-family: 'freighttext_proSBdIt'; }
